# rust-anticaptcha

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: build_dev.yml  build_doc.yml  build_release.yml  clippy.yml  rust.yml  test.yml
src/: control.rs  enums.rs  image_captcha.rs  image_to_text.rs  lib.rs  main.rs  structs.rs  token_captcha.rs
src/core/: captcha_interface.rs  client.rs  constants.rs  enums.rs  image_instrument.rs  mod.rs  request_interface.rs  structs.rs
src/instruments/: image_instrument.rs  mod.rs
tests/: control_test.rs  image_captcha_test.rs  structs.rs
