[package]
name = "rust-anticaptcha"
description = "Rust library for AntiCaptcha service API."
version = "0.0.2"
edition = "2021"
authors = ["Red-Panda-Dev <python-captcha@pm.me>"]
keywords = ["captcha", "anticaptcha", "recaptcha", "funcaptcha", "geetest"]
license = "MIT OR MPL-2.0"
repository = "https://github.com/Red-Panda-Dev/rust-anticaptcha"
homepage = "https://github.com/Red-Panda-Dev/rust-anticaptcha"
documentation = "https://github.com/Red-Panda-Dev/rust-anticaptcha"
rust-version = "1.83"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.134"

[lib]
name = "rust_anticaptcha"
path = "src/lib.rs"
crate-type = ["lib"]
